Fixed content shift

--- a/src/scss/cagov/site-header.scss
+++ b/src/scss/cagov/site-header.scss
@@ -64,7 +64,8 @@
 
         .logo-img {
           max-width: 100%;
-          height: auto;
+          min-height: auto;
+          height: 4rem;
           display: inline-block;
           transition: all 0.3s;
         }
